# mojibake_file_name_fixer

./: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
src/: encoding_tools.py  fix_dir.py  fix_dir_recursive.py  fix_file.py  fix_string.py  main.py
