[project]
name = "mojibake_file_name_fixer"
version = "0.1.0"
description = "Fix mojibake and encoding errors in filenames and text."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ftfy>=6.3.1",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "test"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["ftfy"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
